human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_88.wast
(assert_invalid
  (module (func $type-block-value-nested-unreachable-num-vs-void
    (block (i32.const 3) (block (unreachable)))
  ))
  "type mismatch"
)